i18n en & tr updated. Deleted SnackBar. Converted ToastMessage.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,11 +1,132 @@
 {
-  "hello": "Hello, World!",
-  "welcome": "Welcome to our app.",
+  "hello": "Hello!",
+  "test": "OFU 20 Sept",
+  "welcome": "Welcome",
   "changeLanguage": "Change Language",
-  "projectsDetails": "Your amazing app starts here. Open your favorite code editor and start editing this project.",
   "Login": "Login",
   "Register": "Register",
   "Email": "Email",
   "Password": "Password",
-  "ForgotPassword": "Forgot your password?"
+  "ReSend": "Resend",
+  "ProblemReported": "The problem has been reported.",
+  "Thanks": "Thanks.",
+  "CodeSentAgain": "The code has been sent again.",
+  "ForgotPassword": "Forgot Password",
+  "WelcomeScreenFormHeaderText": "All your cards in one place with the wallet.",
+  "onLogin": "Log in",
+  "EmailAdress": "Email Address",
+  "Next": "Next",
+  "GiveUp": "Give Up",
+  "Okay": "Okay",
+  "ReportProblem": "Report a Problem",
+  "EmailValidateNull": "Please enter an email.",
+  "EmailValidateInvalid": "Invalid email format",
+  "EmailAlreadyExists": "Email already exists.",
+  "Name": "Name",
+  "Surname": "Surname",
+  "PhoneNumber": "Phone Number",
+  "UserAgreementText": "I accept the User Agreement and Privacy Policy.",
+  "CampaingAgreementText": "I want to be informed about campaigns and developments.",
+  "NoFoundBankCard": "No bank cards are linked to your idvlabs Wallet account.",
+  "AddNewBankCard": "Add New Bank Card",
+  "SendPasswordResetCode": "Send Password Reset Code",
+  "DeleteAccount": "Delete My Account",
+  "Loading": "Loading...",
+
+  "OldPassword": "Old Password",
+  "NewPassword": "New Password",
+  "ReNewPassword": "Re-enter Your New Password",
+  "SaveInformation": "Save Information",
+
+  "UpdatePhoto": "Update Photo",
+  "AddTransaction": "Add Transaction",
+
+  "RemoveReservation": "Remove Reservation",
+  "AddReservation": "Add Reservation",
+
+  "HomePage": "Home Page",
+  "QRPayment": "QR Payment",
+  "Wallet": "Wallet",
+
+  "MyCreditCards": "My Credit Cards",
+  "MyBankCards": "My Bank Cards",
+  "MyStoreCards": "My Store Cards",
+  "MyGiftCards": "My Gift Cards",
+
+  "BaseProfileScreenFormEditUserButton": "Edit User Information",
+  "BaseProfileScreenFormChangePasswordButton": "Change Wallet Password",
+  "BaseProfileScreenFormEagreementButton": "Agreements and Legal",
+  "BaseProfileScreenFormSupportButton": "Support / FAQ",
+  "BaseProfileScreenFormDeleteWalletButton": "Delete Wallet Account",
+
+  "EnterWalletPassword": "Enter Wallet Password",
+  "CompanyName": "Company Name",
+  "Amount": "Amount",
+
+  "PaymentType": "PAYMENT METHODS",
+  "PaywithBankCard": "Pay with Bank Card",
+  "PaywithCreditCard": "Pay with Credit Card",
+  "PaywithWalletCard": "Pay with Wallet Account",
+  "PaywithAnotherCard": "Pay with Other Cards",
+
+  "Campaigns": "Campaigns",
+
+  "SomethingWentWrong": "Something went wrong. Please try again.",
+  "AcceptUserAgreement": "Please Accept the User Agreement.",
+
+  "PasswordsDontMatch": "Passwords Don't Match",
+  "BadCode": "Bad Code",
+  "PasswordCouldNotSent": "Password could not be sent",
+  "Deposit": "Deposit",
+  "AmountDetermination": "Amount Determination",
+  "TransactionConfirmation": "Transaction Confirmation",
+  "MyRegisteredCards": "My Registered Cards",
+  "AddingBankCard": "Adding Bank Card",
+  "MyProfile": "My Profile",
+  "QRTransactions": "QR Transactions",
+  "AddingCard": "Add Card",
+  "Pay": "Pay",
+  "SelectPaymentMethod": "Select Payment Method",
+  "TransactionDetail": "Transaction Detail",
+  "AddingTransaction": "Add Transaction",
+  "MyReservations": "My Reservations",
+  "TransactionHistory": "Transaction History",
+
+  "LogOut": "Log Out",
+  "Cancel": "Cancel",
+  "Close": "Close",
+  "LogOutText": "Are you sure you want to log out?",
+
+  "LastTransaction": "Last Transactions",
+
+  "CreditCard": "Credit Card",
+  "BankCard": "Bank Card",
+  "WalletCard": "Wallet Account",
+  "Back": "Back",
+  "TransactionType": "Transaction Type",
+  "StartDate": "Start Date",
+  "EndDate": "End Date",
+  "Search": "Search",
+
+  "LoginScreenFormSecondHeaderText": "Please enter your wallet password to log in.",
+  "LoginScreenFormThirdHeaderText": "Enter the login code sent to your phone.",
+  "LoginScreenFormSecondText": "Please enter the 6-digit security code sent to 5XXXXXXXXXX.",
+  "RegisterScreenFormFirstHeaderText": "Create an Account",
+  "RegisterScreenFormSecondHeaderText": "Enter the Security Code",
+  "RegisterScreenFormSecondText": "Enter the 6-digit code we sent.",
+  "RegisterScreenFormThirdHeaderText": "Enter Personal Information",
+  "CreatePasswordScreenFirstHeaderText": "Create a 6-Digit Password",
+  "CreatePasswordScreenFirstText": "Your password must consist of numbers only.",
+  "CreatePasswordScreenSecondHeaderText": "Re-enter the Password",
+  "CreatePasswordScreenSecondText": "Your password must consist of numbers only.",
+  "ForgotPasswordScreenFormFirstHeaderText": "Forgot Password",
+  "ForgotPasswordScreenFormSecondHeaderText": "Password Reset Confirmation",
+  "ForgotPasswordScreenFormSecondText": "Enter the 6-digit security code sent to your email.",
+  "DeleteWalletScreenFormFirstHeaderText": "Do you want to close your idvlabs Wallet account?",
+  "DeleteWalletScreenFormFirstText": "If you close your account, you won't be able to benefit from idvlabs Wallet features and campaigns. All saved card information will be deleted.",
+  "DeleteWalletScreenFormSecondHeaderText": "Enter the 6-Digit Wallet Password.",
+  "DeleteWalletScreenFormThirdHeaderText": "Re-enter the Password",
+  "DeleteWalletScreenFormFourthHeaderText": "You have closed your idvlabs Wallet account.",
+  "DeleteWalletScreenFormFourthText": "Your idvlabs Wallet account has been closed. All saved card information has been deleted.",
+  "InvestScreenFormFirstText": "You can deposit money to your wallet account using your registered bank/credit card or a new card. A transaction fee of up to 1% is charged for deposit transactions."
 }
