Global loading context added. Campaigns service & Transactions service added. mock data deleted. transactions data type updated. Updated i18n files.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -44,6 +44,10 @@
   "UpdatePhoto": "Update Photo",
   "AddTransaction": "Add Transaction",
 
+  "WalletAccount": "wallet account",
+
+  "SearchPlaceHolder": "Search...",
+
   "RemoveReservation": "Remove Reservation",
   "AddReservation": "Add Reservation",
 
