--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -48,6 +48,8 @@
 
   "WalletAccount": "cüzdan hesabının",
 
+  "RemainingTime": "Kalan Süre: ",
+
   "RemoveReservation": "Rezervasyonu Kaldır",
   "AddReservation": "Rezervasyon ekle",
 
