SelectPaymentTypeForm timmer added.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -156,5 +156,7 @@
   "DeleteWalletScreenFormFourthText": "Your idvlabs Wallet account has been closed. All saved card information has been deleted.",
   "InvestScreenFormFirstText": "You can deposit money to your wallet account using your registered bank/credit card or a new card. A transaction fee of up to 1% is charged for deposit transactions.",
   "ConformationCodeCreateError": "An error occurred while generating the verification code.",
-  "ConformationCodeFault": "Invalid verification code."
+  "ConformationCodeFault": "Invalid verification code.",
+
+  "TimeOut": "Time out."
 }
