--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -158,5 +158,7 @@
   "DeleteWalletScreenFormFourthText": "idvlabs Cüzdan hesabın kapatılmıştır.  Kaydettiğin tüm kart bilgileri sistemden silinmiştir.",
   "InvestScreenFormFirstText": " 'Cüzdan hesabına kayıtlı banka/kredi kartınla veya yeni bir kart ile para yatırabilirsin. Para yatırma işlemlerinde tutarın %1’i kadar işlem ücreti alınmaktadır.",
   "ConformationCodeCreateError": "Doğrulama kodu oluşturulurken bir hata oluştu.",
-  "ConformationCodeFault": "Geçersiz doğrulama kodu"
+  "ConformationCodeFault": "Geçersiz doğrulama kodu",
+
+  "TimeOut": "Süre doldu."
 }
